[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piwigo"
dynamic = ["version"]
description = "piwigo description"

readme = {file = "README.srt"}
license = {file = "LICENSE"}
classifiers = {file = "CLASSIFIERS.rst"}
authors = {file = "AUTHORS.txt"}
dependencies = {file = "REQUIREMENTS.txt"}

[project.urlS]
Repository = "https://github.com/fraoustin/piwigo.git"
Changelog = "https://github.com/fraoustin/piwigo/blob/master/CHANGES.rst"
Manifest = "https://github.com/fraoustin/piwigo/blob/master/MANIFEST.in"

[tool.setuptools.dynamic]
version = {attr = "piwigo.__version__"}
